refactor(api): give each error status its own response component
